<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:binding="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="presenter"
            type="com.vkas.secondtranslation.ui.main.MainActivity.Presenter" />

        <variable
            name="sidebarShowsSt"
            type="Boolean"
            android:value="false" />
        <variable
            name="vpnAdSt"
            type="Boolean"
            android:value="false" />
        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        tools:context=".ui.main.MainActivity">

        <include
            android:id="@+id/in_main_title"
            layout="@layout/layout_toolbar_st"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/in_main_title">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="13dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="13dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="1.36:1"
                    android:background="@drawable/bg_main_translation"
                    android:onClick="@{() ->presenter.clickTranslation()}"
                    android:paddingStart="15dp"
                    android:paddingTop="11dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="20dp"
                    app:layout_constraintEnd_toStartOf="@id/constraintLayout2"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/img_translation"
                        android:layout_width="39dp"
                        android:layout_height="39dp"
                        android:src="@mipmap/ic_main_translation"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txt_translation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="11dp"
                        android:layout_marginBottom="2dp"
                        android:text="@string/translate"
                        android:textColor="#FFFFFFFF"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/img_translation" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/multilingual"
                        android:textColor="#FFFFFFFF"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_translation" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="1.36:1"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/bg_main_ocr"
                    android:onClick="@{() ->presenter.clickOcr()}"
                    android:paddingStart="15dp"
                    android:paddingTop="11dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toEndOf="@id/constraintLayout"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/img_ocr"
                        android:layout_width="39dp"
                        android:layout_height="39dp"
                        android:src="@mipmap/ic_main_ocr"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txt_ocr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="11dp"
                        android:layout_marginBottom="2dp"
                        android:text="@string/ocr"
                        android:textColor="#FFFFFFFF"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/img_ocr" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/camera_translate"
                        android:textColor="#FFFFFFFF"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_ocr" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:visibility="gone"
                    android:id="@+id/cons_vpn"
                    android:layout_width="match_parent"
                    android:layout_height="108dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_main_vpn"
                    android:onClick="@{() ->presenter.clickVpn()}"
                    android:paddingStart="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="134dp"
                        android:layout_height="match_parent"
                        android:src="@mipmap/ic_main_vpn"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="25dp"
                        android:text="@string/vpn"
                        android:textColor="#FFFFFFFF"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="20dp"
                        android:text="@string/conncet_vpn_to_protect_internet_privacy"
                        android:textColor="#FFFFFFFF"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:layout_margin="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <FrameLayout
                        android:id="@+id/st_ad_frame"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="@{vpnAdSt ? View.VISIBLE : View.GONE}" />

                    <ImageView
                        android:id="@+id/img_st_ad_frame"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_home_ad_pl"
                        android:visibility="@{vpnAdSt ? View.GONE : View.VISIBLE}" />
                </FrameLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <include
                android:id="@+id/in_home_navigation"
                layout="@layout/layout_home_navigation"
                android:visibility="@{sidebarShowsSt ? View.VISIBLE : View.GONE}"
                binding:presenter="@{presenter}" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:background="#04050C"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="@{() ->presenter.clickHome()}"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@{sidebarShowsSt ? @drawable/ic_home_menu_dis:@drawable/ic_home_menu}" />

                <TextView
                    android:id="@+id/tv_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:textColor="@{sidebarShowsSt ? @color/nav_dis_check:@color/nav_check}"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="@{() ->presenter.clickSetting()}"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@{sidebarShowsSt ? @drawable/ic_setting_menu : @drawable/ic_setting_menu_dis}" />

                <TextView
                    android:id="@+id/tv_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:textColor="@{sidebarShowsSt ? @color/nav_check:@color/nav_dis_check}"
                    android:textSize="14sp" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</layout>
